# less-scope

./: .gitignore  CMakeLists.txt  README.md  clickable.json  less.apparmor  manifest.json  manifest.json.in
po/: POTFILES.in
src/: CMakeLists.txt  client.cpp  client.h  config.h  preview.cpp  query.cpp  query.h  scope.cpp  scope.h  templates.h
src/data/: data.json  less-settings.ini.in  less.ini.in  water.txt  yoda.txt
